[package]
name = "page_rank_from_scratch"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
open = "5.3.1"
ratatui = "0.29.0"
reqwest = "0.12.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
slotmap = { version = "1.0.7", features = ["serde"] }
tokio = { version = "1.41.1", features = ["full"] }
